CSV-648 - ln + reg rule tests